# ros2_lucid

./: .envrc  CMakeLists.txt  package.xml
config/: cameras.json  params.yaml
include/ros2_lucid/: CameraDiscover.hpp  CameraInitialize.hpp  CameraManager.hpp  CameraNode.hpp
launch/: cameras_launch.py
src/: CameraDiscover.cpp  CameraManager.cpp  CameraNode.cpp
